# congrong-menggong

./: README.md  launch.bat  pyproject.toml  requirements.txt
src/: main.py
src/config/: manager.py
src/gui/: app.py  tray.py
src/monitor/: matcher.py  poller.py
src/reply/: engine.py
src/screenshot/: capturer.py
src/utils/: wechat_uia.py
tests/: test_config.py  test_matcher.py  test_screenshot.py
